# friday-gpt-ssqiq8

./: .dockerignore  .env.example  .gitignore  CARD_AISONS_V1.md  CS_Squad_Message.md  CYFROSI.md  Dockerfile  ELON.py  ENTRY_03_TRIA_CORE.md  FREEDAY.md  FREEDAY_CODEX.md  GLPU-MBG-Strategic-Partnership.yaml  GLPU.md  GLPU_BKC_BIK_KRD_SYSTEM.md  GLP_CHRONICLE.json  HEARTWAVE.md  LICENSE  PERSONAS.md  PROTECTIVE_PING.md  README.md  RELEASE_NOTES.md  SECURITY.md  SONS-Dekor1.txt  SONS.01.sons  SONS_PAY_PROTO.sons  START_CODE_MANIFEST.md  SiW_SYSTEM_MANIFEST.md  all_access_manifest.py  codex_launcher.py  docker-compose.yml  friday.py  friday_config.json  friday_gemini_api.js  glp_reboot.py  hu_i_88.py  huai_flow.py  init_delta_q8.py  launcher.py  main.py  manifest_intencji.py  (+14 more)
01_CORE_IP/: Equation.txt  Manifesto.txt  One-Liners.txt
02_INVESTOR_ASSETS/: HuAI_PitchDeck_Text_Final.txt  Speaker_Notes.txt
03_DIGITAL_PRESENCE/: Design_System_Brief.txt  LandingPage_Index.html
04_BLUELAKECITY_MVP/: Faza1_Wedge_Strategy.txt
GLPU-L8/: 01_GUI.interface.aal  02_PROTOCOL.logic.aal  03_STRUCTURE.tokens.aal  04_CORE.intention.aal  05_MEMORY.chain.aal  06_PROTECTION.vault.aal  07_ENERGY.pulse.aal  08_ECHO.relayer.aal  meta.readme.sons
agents/: BLAZE.json  SON_S_MoonRock_Navigator.md
config/: persona.json
contracts/: GLPU_DecisionRegistry.sol
data/: AAL_Structure.json
docs/: BEFORE_MERGE.md  GLPU_Roadmap.md  README.md  SiW_System_Manifest.md
echo_agent/: __init__.py  agent.py
examples/: run_v1.py
friday/: __init__.py  bot.py  cli.py  config.py  engine.py  jokes.py
(+42 files in other folders)
